[package]
name = "markdown_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.1.0"
pulldown-cmark = "0.9.2"
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
reqwest = "0.11.16"
tide-websockets = "0.4.0"
