[package]
name = "markdown_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
env_logger = "0.10.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
webbrowser = "0.8.8"
log = "0.4.17"
open = "4.0.1"
